--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.15.0",
+    "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.7.1",
+    "react-leaflet": "^4.2.0",
     "react-moment": "^1.1.3",
     "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2",
